cursive-bootstrap/tests/ui/E-CON/E-CON-0014.cursive
// RUN: compile-fail
// DIAG: E-CON-0014
// SPEC: 8.9
// DESC: ordered modifier on different array bases

procedure diff_bases(domain: $ExecutionDomain) -> () {
    var arr1: [i32; 10] = [0; 10]
    var arr2: [i32; 10] = [0; 10]
    parallel domain {
        dispatch i in 0..10 [ordered] {
            arr1[i] = arr2[i]  //~ ERROR E-CON-0014: ordered on different array bases
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
